--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <!--Header-->
     <header>
     <div class="navBar">
-        <img src="img/Group 2.png" alt="logo">
+        <img src="Group 2.png" alt="logo">
         <div class="hbTitles">
         <div class="home">Home
         </div>
@@ -24,7 +24,7 @@
         <div class="searchBar">
             <label for="searchBar">Search</label>
             <input type="text" placeholder="Search">
-            <img src="img/8666693_search_icon 1.svg" alt="searchButton">
+            <img src="8666693_search_icon 1.svg" alt="searchButton">
         </div>
         <div class="postButton">Post</div>
     </div>
@@ -47,7 +47,7 @@
             </div>
             <div class="heroRight">
             <div class="heroImage">
-                <img src="img/8513141.jpg" alt="hero img growth">
+                <img src="8513141.jpg" alt="hero img growth">
             </div>
             </div>
     </div>
@@ -55,12 +55,12 @@
 
     <!--featured posts section-->
     <div class="featured">
-        <div class="featuredHeading">
+        <div class="subHeading">
             Featured Posts
         </div>
         <div class="featFlex">
         <div class="featuredLeft">
-            <img src="img/woman-relaxing-meditating-fresh-air 1.jpg" alt="woman_relaxing">
+            <img src="woman-relaxing-meditating-fresh-air 1.jpg" alt="woman_relaxing">
                 <div class="section">
                 <button>Lifestyle</button>
                 <p>By Elizabeth</p>
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="featuredCenter">
-            <img src="img/asian-woman-wearing-vietnam-culture-traditional-strawberry-garden-doi-ang-khang-chiang-mai-thailand 1.jpg" alt="wanderlust">
+            <img src="asian-woman-wearing-vietnam-culture-traditional-strawberry-garden-doi-ang-khang-chiang-mai-thailand 1.jpg" alt="wanderlust">
             <div class="section">
                 <button>Travel</button>
                 <p>by John</p>
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="featuredRight">
-            <img src="img/young-couple-doing-yoga-lake 1.jpg" alt="yoga">
+            <img src="young-couple-doing-yoga-lake 1.jpg" alt="yoga">
             <div class="section">
                 <button>Growth</button>
                 <p>by Carol</p>
@@ -107,5 +107,97 @@
     </div>
 </div> 
     <!--featured end-->
+
+    <!--categories-->
+
+    <div class="categoriesSection">
+        <div class="subHeading">
+            Categories
+        </div>
+        <div class="category1">
+            <div><img src="Group 20.svg" alt=""></div>
+            <div class="written"><div class="catHeading">
+                Personal Growth
+            </div>
+            <div class="catBody">
+                Discover strategies, insights, and inspiring stories to help you grow as an individual. Elevate your mindset, overcome challenges, and unlock your true potential.
+            </div>
+            <button>Explore</button></div>
+        </div>
+        <div class="category2">
+            <div class="written"><div class="catHeading">
+                Travel & Exploration
+            </div>
+            <div class="catBody">
+                Embark on journeys around the world through firsthand experiences and travel guides. Uncover hidden treasures, cultural marvels, and awe-inspiring adventures.
+            </div>
+            <button>Explore</button></div>
+            <div><img src="Group 21.svg" alt=""></div>
+        </div>
+        <div class="category3">
+            <div><img src="Group 22.svg" alt=""></div>
+            <div class="written"><div class="catHeading">
+                Lifestyle & Well-being
+            </div>
+            <div class="catBody">
+                Explore the art of living well with insights on health, wellness, relationships, and everyday life. Achieve balance and find joy in the little things.
+            </div>
+            <button>Explore</button></div>
+        </div>
+    </div>
+    <!--categories end-->
+
+    <!--NewsLetter Section-->
+
+    <div class="newsLetter">
+    <div class="nLetterHead">
+        Join Our <span>News Letter</span>
+    </div>
+        <div class="nlbody">Stay in the Know! Subscribe to our newsletter for the latest updates, inspiring stories, and exclusive content delivered straight to your inbox.</div>
+        <p><div class="nlEmail">
+            <input type="email" placeholder="Enter Your Email">
+            <img src="Group 13.svg" alt="submit">
+        </div></p>
+    </div>
+    <!--NewsLetter End->
+
+    <!-footer-start-->
+    
+    <div class="footer"><!--flex-main(1)-->
+        <div class="flexMain">
+            <div class="flexOne">
+                <img src="Group 2.png" alt="">
+                <p>Have a question, suggestion, or just want to connect? We'd love to hear from you! Reach out to us through the options below and let's start a conversation.</p>
+                <div class="socialMediaIcons"><!--flex-(2)-->
+                    <img src="Icons.svg" alt="">
+                </div>
+            </div>
+            <div class="flexTwo">
+                <div class="footerHead">Find Our Products</div>
+                <div class="footerPoints">
+                    <p>Contact Us</p>
+                    <p>About Us</p>
+                    <p>Privacy Policy</p>
+                    <p>Payment Policy</p>
+                    <p>Terms and Conditions</p>
+                </div>
+            </div>
+            <div class="flexThree">
+                <div class="footerHead">Contact Us</div>
+                <div class="footerPoints">
+                    <p>info@lifelens.com</p>
+                    <p>(123) 456-7890</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footerFinal">
+        <hr>
+        <p>© 2023 LifeLens. All rights reserved.</p>
+    </div>
+
+    <!--footer-start-->
+
 </body>
 </html>
